    not prevent gc from running
  * threads
    ** bug fix: RELEASE-FOREGROUND doesn't choke on session lock if
       there is only one thread in the session
    ** bug fix: memory leak for streams created in one thread and
       written to in another
    ** bug fix: lockup when compiled with gcc4
    ** bug fix: race that allows the gc to be triggered when gc is
       inhibited
    ** buf fix: one less memory fault in INTERRUPT-THREAD, again
  * fixed some bugs revealed by Paul Dietz' test suite:
    ** CALL-NEXT-METHOD signals an error (in safe code) when the call
       has arguments with a different set of applicable methods from
       the orignal arguments.

changes in sbcl-0.9.3 relative to sbcl-0.9.2:
  * New feature: Experimental support for bivalent streams: streams
    opened with :element-type :default now allow character and binary
    (unsigned-byte 8) I/O
  * Support for the koi8-r external format.  (thanks to Ivan Boldyrev)
  * Bug fix: OPEN no longer fails when *PRINT-READABLY* is T. (thanks
    to Zach Beane)
  * bug fix: no more highly sporadic "couldn't check whether ~S is
    readable" when reading a stream and an interrupt hits in the middle
    of a select system call
  * compiler better recognizes complex arrays (reported by Eduardo
    Muñoz)
  * bug fix: out-of-line SB-SYS:FOREIGN-SYMBOL-ADDRESS did not work
    for variables on SBCL built with linkage-tables. (reported by Luis
    Oliveira)
  * various error reporting improvements.
  * optimizations: LOGNOR on fixnums is improved in the MIPS backend.
    (Thanks to Thiemo Seufer)
  * bug fix: nested reader invokations work correctly
  * bug fix: it is possible to have simultaneous references to foreign
    code and foreign data with the same name.
  * threads
    ** added x86-64 support
    ** incompatible change: the threading api now works with thread
       objects instead of thread ids
    ** bug fix: threads are protected from signals and interruption when